Fix About content spacing and position

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -32,4 +32,27 @@
 
 .about-content {
   width: 42.5%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.about-content h3 {
+  margin: 1.5% 0 2.5%;
+  text-decoration: underline;
+}
+
+.about-content p {
+  margin: 6px 0;
+}
+
+.final-message {
+  padding: 1.5% 4%;
+  margin: 5% 6% 1.5%;
+  text-align: center;
+  font-size: 1.2rem;
+  border-left: 3px solid cyan;
+  border-right: 3px solid cyan;
+  border-radius: 10px;
+  background-color: rgba(0, 255, 0, 0.356);
 }
